# gpp-gui-qt4-pomidorka

./: .gitignore  CMakeLists.txt  ReadMe.txt
resources/: resources.qrc
sources/: main.cpp  mainwindow.cpp  mainwindow.h  staticview.cpp  staticview.h  timer.cpp  timer.h
src/: main.cpp  setting.cpp  setting.h  staticview.cpp  staticview.h  timer.cpp  timer.h  timerwindow.cpp  timerwindow.h  trayicon.cpp  trayicon.h
